--- a/docfx_project/home/toc.yml
+++ b/docfx_project/home/toc.yml
@@ -96,7 +96,9 @@
        - name: Setup Testcases 
          href: ./setup-testcases-video.md    
        - name: Run Factory 
-         href: ./run-factory-video.md         
+         href: ./run-factory-video.md   
+       - name: Create & Publish a New Template after a Successful Factory Run
+         href: ./create-publish-new-template.md  
 - name: Troubleshooting
   items:
    - name: Extend
