--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "homepages": [],
-  "source_base_path": "C:/Jenkins/jobs/DocumentationPortal-Build/workspace/docfx_project",
+  "source_base_path": "C:/Program Files (x86)/Jenkins/workspace/DocumentationPortal-Build/docfx_project",
   "xrefmap": "xrefmap.yml",
   "files": [
     {
@@ -633,7 +633,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/clone-environment.html",
-          "hash": "sk3s9gENor00/oaeuOQigg=="
+          "hash": "6nON2Od4enUDbzlgs1XBZw=="
         }
       },
       "is_incremental": false,
@@ -657,19 +657,22 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/components-products.html",
-          "hash": "JfnOIHm324BVdmF4NHyGdw=="
+          "hash": "p8IriL5hy/KcZzO8GToesQ=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/create-publish-template.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/create-publish-template.html",
-          "hash": "Ve3rOoj8zv8pk9k+5ovLcg=="
+          "hash": "7nV0TeXHym6mv3lCZG3lvQ=="
         }
       },
       "is_incremental": false,
@@ -693,7 +696,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/environment-basic-operations.html",
-          "hash": "173/Gmya9IOJSjysJH64KA=="
+          "hash": "ktc7JlfNJPXv4aD8rxl3pw=="
         }
       },
       "is_incremental": false,
@@ -729,7 +732,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/factories.html",
-          "hash": "nKgLIl0Rnku6Q9C5hK+miw=="
+          "hash": "kBe3hXPnNAG/p/XoCXdCBg=="
         }
       },
       "is_incremental": false,
@@ -1073,6 +1076,17 @@
       "output": {
         "resource": {
           "relative_path": "home/techguides/images/artifactory-test-structure.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/artifactory_view.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/artifactory_view.png"
         }
       },
       "is_incremental": false,
@@ -2444,6 +2458,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/environment-schedule.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/environment-schedule.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/export-environment.png",
       "output": {
         "resource": {
@@ -2591,6 +2616,17 @@
       "output": {
         "resource": {
           "relative_path": "home/techguides/images/factory-run-environment.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/factory-scheduler.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/factory-scheduler.png"
         }
       },
       "is_incremental": false,
@@ -4083,17 +4119,6 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/run-factory-completed.png",
-      "output": {
-        "resource": {
-          "relative_path": "home/techguides/images/run-factory-completed.png"
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "Resource",
       "source_relative_path": "home/techguides/images/run-factory-create-test.png",
       "output": {
         "resource": {
@@ -4138,10 +4163,21 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/run-factory-test-deploy.png",
+      "source_relative_path": "home/techguides/images/run-factory-new-environment.png",
       "output": {
         "resource": {
-          "relative_path": "home/techguides/images/run-factory-test-deploy.png"
+          "relative_path": "home/techguides/images/run-factory-new-environment.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/run-factory-test-completed.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/run-factory-test-completed.png"
         }
       },
       "is_incremental": false,
@@ -4347,10 +4383,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/stage-metadata.png",
+      "source_relative_path": "home/techguides/images/stage_metadata.png",
       "output": {
         "resource": {
-          "relative_path": "home/techguides/images/stage-metadata.png"
+          "relative_path": "home/techguides/images/stage_metadata.png"
         }
       },
       "is_incremental": false,
@@ -4358,10 +4394,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/streams-create-stage.png",
+      "source_relative_path": "home/techguides/images/start-all-user-env.png",
       "output": {
         "resource": {
-          "relative_path": "home/techguides/images/streams-create-stage.png"
+          "relative_path": "home/techguides/images/start-all-user-env.png"
         }
       },
       "is_incremental": false,
@@ -4369,10 +4405,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/streams-create.png",
+      "source_relative_path": "home/techguides/images/stop-all-user-env.png",
       "output": {
         "resource": {
-          "relative_path": "home/techguides/images/streams-create.png"
+          "relative_path": "home/techguides/images/stop-all-user-env.png"
         }
       },
       "is_incremental": false,
@@ -4380,10 +4416,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/streams-created.png",
+      "source_relative_path": "home/techguides/images/streams_create.png",
       "output": {
         "resource": {
-          "relative_path": "home/techguides/images/streams-created.png"
+          "relative_path": "home/techguides/images/streams_create.png"
         }
       },
       "is_incremental": false,
@@ -4391,10 +4427,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/streams-delete-stage.png",
+      "source_relative_path": "home/techguides/images/streams_create_stage.png",
       "output": {
         "resource": {
-          "relative_path": "home/techguides/images/streams-delete-stage.png"
+          "relative_path": "home/techguides/images/streams_create_stage.png"
         }
       },
       "is_incremental": false,
@@ -4402,10 +4438,43 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/streams-delete-streams.png",
+      "source_relative_path": "home/techguides/images/streams_created.png",
       "output": {
         "resource": {
-          "relative_path": "home/techguides/images/streams-delete-streams.png"
+          "relative_path": "home/techguides/images/streams_created.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/streams_delete_stage.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/streams_delete_stage.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/streams_delete_streams.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/streams_delete_streams.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/streams_edited.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/streams_edited.png"
         }
       },
       "is_incremental": false,
@@ -4798,6 +4867,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/trigger-new-template.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/trigger-new-template.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/tsa-live-file.png",
       "output": {
         "resource": {
@@ -5010,12 +5090,15 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/run-factory.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/run-factory.html",
-          "hash": "HQLq/lFqtFlbKUar6x2jWw=="
+          "hash": "n2ZCgMwXmfNRmQFCcYlSMg=="
         }
       },
       "is_incremental": false,
@@ -5034,24 +5117,30 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/stage.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/stage.html",
-          "hash": "JmCHmfZI6DOqlg2zhK9r2g=="
+          "hash": "zJv0e2pmsfI73J01z8Pd/w=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/stream.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/stream.html",
-          "hash": "GG1Dc9ghLNAxeVU1gcK9Pw=="
+          "hash": "QlMB15XSbJycc7Rsd8E+tA=="
         }
       },
       "is_incremental": false,
@@ -5306,6 +5395,15 @@
         "incrementalPhase": "build"
       },
       "processors": {
+        "TocDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "ManagedReferenceDocumentProcessor": {
+          "can_incremental": false,
+          "incrementalPhase": "build"
+        },
         "ResourceDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
@@ -5317,15 +5415,6 @@
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
-          "can_incremental": false,
-          "incrementalPhase": "build"
-        },
-        "TocDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
-        "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build"
         }
